fixing the remove btn bug the bug is that the remove btn doesn't be visible in mobile

--- a/style.css
+++ b/style.css
@@ -140,3 +140,8 @@ main{
         padding-top: 2em;
     }
 }
+@media (max-width: 1000px) {
+    .removeTodoBtn{
+        opacity: 1;
+    }
+}
